# programming_contest

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODOs.org
.circleci/: config.yml
DP/: CMakeLists.txt  README.md  bit.hpp
_include/: mathjax-v3.html
_layouts/: default.html
benchmark/: CMakeLists.txt  README.md  text_search_benchmark.cpp  text_search_benchmark.plt
character_strings/: CMakeLists.txt  README.md  burrows_wheeler.cpp  burrows_wheeler.hpp  convert.hpp  palindromic_tree.hpp  rolling_hash.hpp  string_utils.hpp  suffix_array.cpp  suffix_array.hpp  text_search.cpp  text_search.hpp  trie.hpp  z.hpp
character_strings/src/: burrows_wheeler.cpp  convert.cpp  palindromic_tree.cpp  rolling_hash.cpp  suffix_array.cpp  text_search.cpp  trie.cpp  z.cpp
convenient/: CMakeLists.txt  README.md  compression.hpp  extend_cout.hpp  recurrence.hpp
data_structure/: CMakeLists.txt  README.md  bigint.hpp  binary_indexed_tree.cpp  binary_indexed_tree.hpp  compressed2d_segment_tree.hpp  int128.hpp  lazy_segment_tree.cpp  lazy_segment_tree.hpp  lazy_segment_tree_usage.hpp  median.hpp  mergable_range_set.hpp  segment_tree.hpp  segment_tree_pu_rq.cpp  segment_tree_pu_rq.hpp  segment_tree_pu_rq_usage.hpp  segment_tree_usage.hpp  sparse_table.hpp  treap.hpp  union_find.hpp  wavelet_matrix.hpp
data_structure/src/: bigint.cpp  binary_indexed_tree.cpp  compressed2d_segment_tree.cpp  int128.cpp  lazy_segment_tree.cpp  median.cpp  mergable_range_set.cpp  segment_tree.cpp  segment_tree_pu_rq.cpp  sparse_table.cpp  treap.cpp  union_find.cpp  wavelet_matrix.cpp
data_structure/union_find/: union_find.hpp
graph/: CMakeLists.txt  Ford_Fulkerson.cpp  Ford_Fulkerson.hpp  README.md  bellman_ford.cpp  bellman_ford.hpp  bipartile.cpp  bipartile.hpp  bipartile_matching.hpp  boruvka.hpp  dijkstra.cpp  dijkstra.hpp  dinic.hpp  edmonds_karp.hpp  ford_fulkerson.hpp  hopcroft_karp.hpp  kruskal.cpp  kruskal.hpp  lowlink.hpp  prim.cpp  prim.hpp  primal_dual.hpp  steiner_tree.hpp  strongly_connected_components.hpp  successive_shortest_path.hpp  topological_dag.cpp  topological_dag.hpp  warshall_floyd.cpp  warshall_floyd.hpp
graph/src/: Ford_Fulkerson.cpp  bellman_ford.cpp  bipartile.cpp  bipartile_matching.cpp  boruvka.cpp  dijkstra.cpp  dinic.cpp  edmonds_karp.cpp  hopcroft_karp.cpp  kruskal.cpp  lowlink.cpp  prim.cpp  primal_dual.cpp  steiner_tree.cpp  strongly_connected_components.cpp  successive_shortest_path.cpp  topological_dag.cpp  warshall_floyd.cpp
math/: CMakeLists.txt  README.md  algebra.cpp  algebra.hpp  combination.hpp  convex_hull_trick.cpp  convex_hull_trick.hpp  convolution.hpp  formal_power_series.hpp  geometry.cpp  geometry.hpp  interpolation.hpp  matrix.hpp  modint.hpp  power.cpp  power.hpp  prime.cpp  prime.hpp  rational.hpp  set_by_bit.hpp
math/src/: algebra.cpp  combination.cpp  convex_hull_trick.cpp  convolution.cpp  formal_power_series.cpp  geometry.cpp  interpolation.cpp  matrix.cpp  modint.cpp  power.cpp  prime.cpp  rational.cpp  set_by_bit.cpp
notes/: README.md  theorem.md
optimization/: CMakeLists.txt  README.md  annealing.hpp
print/: CMakeLists.txt  README.md  extend_cout.cpp  extend_cout.hpp
sort/: CMakeLists.txt  README.md  bitonic.hpp  bitonic_sort.hpp  bubble.cpp  bubble.hpp  counting.hpp  insertion.cpp  insertion.hpp  merge.hpp  min_k.hpp  selection.cpp  selection.hpp  shell.cpp  shell.hpp
spacemacs/: RAQ_use  RMQ_use  RSQ_use  RUQ_use  bellman_ford_def  bigint_def  chinese_reminder_theorem_def  chinese_reminder_theorem_use  compressed2d_segment_tree_def  convert_def  convert_use  convex_hull_trick_def  coordinate_compression_def  coordinate_compression_use  crt_def  devisor_use  diameter_def  dijkstra_def  euler_phi_def  extgcd_def  extgcd_use  factorize_def  fast_zeta_use  fft_use  gcd_use  (+31 more)
tree/: CMakeLists.txt  README.md  diameter.hpp  euler_tour.hpp  heavy_light_decomposition.hpp  lowest_common_ancestor.hpp  range_query_on_tree.hpp
tree/src/: diameter.cpp  euler_tour.cpp  heavy_light_decomposition.cpp  lowest_common_ancestor.cpp  range_query_on_tree.cpp
(+292 files in other folders)
