cmake_minimum_required(VERSION 2.8)

add_executable(text_search src/text_search.cpp)
add_executable(suffix_array src/suffix_array.cpp)
add_executable(burrows_wheeler src/burrows_wheeler.cpp)
add_executable(rolling_hash src/rolling_hash.cpp)
add_executable(trie src/trie.cpp)
add_executable(z src/z.cpp)
add_executable(convert src/convert.cpp)
