cmake_minimum_required(VERSION 2.8)

add_executable(dijkstra dijkstra.cpp)
add_executable(Ford_Fulkerson Ford_Fulkerson.cpp)
add_executable(warshall_floyd warshall_floyd.cpp)
add_executable(bipartile bipartile.cpp)
add_executable(topological_dag topological_dag.cpp)
add_executable(bellman_ford bellman_ford.cpp)
