cmake_minimum_required(VERSION 2.8)

add_executable(dijkstra src/dijkstra.cpp)
add_executable(ford_fulkerson src/ford_fulkerson.cpp)
add_executable(warshall_floyd src/warshall_floyd.cpp)
add_executable(bipartile src/bipartile.cpp)
add_executable(topological_dag src/topological_dag.cpp)
add_executable(bellman_ford src/bellman_ford.cpp)
add_executable(prim src/prim.cpp)
add_executable(kruskal src/kruskal.cpp)
add_executable(bipartile_matching src/bipartile_matching.cpp)
add_executable(boruvka src/boruvka.cpp)
add_executable(edmonds_karp src/edmonds_karp.cpp)
add_executable(dinic src/dinic.cpp)
add_executable(primal_dual src/primal_dual.cpp)
add_executable(successive_shortest_path src/successive_shortest_path.cpp)
add_executable(strongly_connected_components src/strongly_connected_components.cpp)
