cmake_minimum_required(VERSION 2.8)

add_executable(power src/power.cpp)
add_executable(prime src/prime.cpp)
add_executable(geometry src/geometry.cpp)
add_executable(algebra src/algebra.cpp)
add_executable(convex_hull_trick src/convex_hull_trick.cpp)
add_executable(matrix src/matrix.cpp)
add_executable(interpolation src/interpolation.cpp)
add_executable(modint src/modint.cpp)
