cmake_minimum_required(VERSION 2.8)

add_executable(lowest_common_ancestor src/lowest_common_ancestor.cpp)
add_executable(euler_tour src/euler_tour.cpp)
add_executable(diameter src/diameter.cpp)
add_executable(range_query_on_tree src/range_query_on_tree.cpp)
add_executable(heavy_light_decomposition src/heavy_light_decomposition.cpp)
